fix navbar mobile visibility

--- a/app/porcupine/static/css/porcupine.css
+++ b/app/porcupine/static/css/porcupine.css
@@ -847,8 +847,13 @@ input[type="file"] {
   border-radius: 0;
 }
 
+.navbar-open {
+  left: 30% !important;
+  transition: transform 0.1s ease-in-out;
+}
+
 @media(max-width: 1200px) {
   .header {
-    left: 4%;
+    left: 10%;
   }
 }
